Enable strict null-safety for Kotlin projects
Closes gh-591

--- a/initializr-generator/src/main/resources/templates/starter-pom.xml
+++ b/initializr-generator/src/main/resources/templates/starter-pom.xml
@@ -177,6 +177,9 @@
 				<version>${kotlin.version}</version>
 				{{/kotlinSupport}}
 				<configuration>
+					<args>
+						<arg>-Xjsr305=strict</arg>
+					</args>
 					<compilerPlugins>
 						<plugin>spring</plugin>
 					</compilerPlugins>
