Limit ignoring of directories in Git to the root of the repository
Closes gh-623

--- a/initializr-generator/src/main/resources/templates/gitignore.tmpl
+++ b/initializr-generator/src/main/resources/templates/gitignore.tmpl
@@ -1,5 +1,5 @@
 {{#mavenBuild}}
-target/
+/target/
 !.mvn/wrapper/maven-wrapper.jar
 {{/mavenBuild}}
 {{^mavenBuild}}
@@ -24,9 +24,9 @@ target/
 *.ipr
 
 ### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
